--- a/app/src/main/res/layout/activity_detalle_card.xml
+++ b/app/src/main/res/layout/activity_detalle_card.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetalleCard"
-    android:background="@drawable/fondo_login">
+    android:background="@drawable/fondo_login"
+    android:fitsSystemWindows="false">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
