--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="Correo"
+                    android:hint="nombre de la cuenta"
                     android:textColorHint="@color/inversoDeg"
                     app:boxBackgroundMode="outline"
                     app:boxCornerRadiusTopEnd="10dp"
