--- a/app/src/main/res/xml/activity_inicio_sesion_scene.xml
+++ b/app/src/main/res/xml/activity_inicio_sesion_scene.xml
@@ -264,9 +264,10 @@
             app:layout_constraintStart_toEndOf="@+id/tvRegistro"
             app:layout_constraintTop_toBottomOf="@+id/tvContrasenia"
             android:layout_marginTop="16dp"
-            app:layout_constraintHorizontal_bias="0.25"
+            app:layout_constraintHorizontal_bias="0.267"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="1dp" />
+            android:layout_marginBottom="1dp"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Constraint
             android:id="@+id/sRecordar"
