--- a/app/src/main/res/layout/activity_datos_usuario.xml
+++ b/app/src/main/res/layout/activity_datos_usuario.xml
@@ -75,6 +75,37 @@
                 </RelativeLayout>
             </LinearLayout>
 
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
+                android:layout_margin="20dp"
+                android:elevation="5dp"
+                android:hint="Ultimo login:"
+                android:textColorHint="@color/verde_0ff248"
+                app:boxBackgroundMode="outline"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxStrokeColor="@color/verde_0ff248"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/white"
+                app:helperTextTextColor="@color/red"
+                app:hintTextColor="@color/verde_0ff248">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/datos_user_ubicacion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:inputType="textMultiLine"
+                    android:lines="5"
+                    android:minLines="5"
+                    android:scrollHorizontally="true"
+                    android:singleLine="false"
+                    android:textColor="@color/white" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/correoUserBox"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
