--- a/app/src/main/res/layout/activity_modificar.xml
+++ b/app/src/main/res/layout/activity_modificar.xml
@@ -39,7 +39,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/addPass_Foto"
+                    android:id="@+id/addPass_FotoE"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
@@ -75,7 +75,7 @@
                 app:hintTextColor="@color/inversoDeg">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/addPass_Cuenta"
+                    android:id="@+id/addPass_CuentaE"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white" />
@@ -100,7 +100,7 @@
                 app:hintTextColor="@color/inversoDeg">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/addPass_User"
+                    android:id="@+id/addPass_UserE"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white" />
@@ -124,29 +124,24 @@
                 app:hintTextColor="@color/inversoDeg">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/addPass_Pass"
+                    android:id="@+id/addPass_PassE"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+            <ImageButton
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:layout_weight="2"
-                    android:backgroundTint="@color/inversoDeg"
-                    android:elevation="30dp"
-                    android:onClick="registraPass"
-                    android:scaleType="fitCenter"
-                    android:src="@android:drawable/ic_menu_save" />
-            </LinearLayout>
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:backgroundTint="@color/inversoDeg"
+                android:elevation="30dp"
+                android:onClick="registraPass"
+                android:scaleType="fitCenter"
+                android:src="@android:drawable/ic_menu_save" />
 
         </LinearLayout>
     </ScrollView>
