--- a/app/src/main/res/layout/activity_pantalla_empresario.xml
+++ b/app/src/main/res/layout/activity_pantalla_empresario.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="top|center"
             android:layout_weight="0"
             android:elevation="30dp"
-            android:text="Empresarial"
+            android:text="Usuarios a cargo"
             android:textAlignment="center"
             android:textSize="25sp" />
 
