--- a/app/src/main/res/layout/activity_pantalla_inicio.xml
+++ b/app/src/main/res/layout/activity_pantalla_inicio.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="top|center"
             android:layout_weight="0"
             android:elevation="30dp"
-            android:text="Bienvenid@"
+            android:text="Mis contraseñas"
             android:textAlignment="center"
             android:textSize="25sp" />
 
