--- a/app/src/main/res/layout/activity_modificar.xml
+++ b/app/src/main/res/layout/activity_modificar.xml
@@ -130,19 +130,33 @@
                     android:inputType="textPassword"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
+   <Space
+       android:layout_width="20dp"
+       android:layout_height="20dp"/>
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/inversoDeg"
+                android:elevation="30dp"
+                android:onClick="registraPass"
+                android:scaleType="fitCenter"
+                android:src="@android:drawable/ic_menu_save" />
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
 
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:layout_weight="2"
                 android:backgroundTint="@color/inversoDeg"
                 android:elevation="30dp"
-                android:onClick="registraPass"
+                android:onClick="EliminarPass"
                 android:scaleType="fitCenter"
-                android:src="@android:drawable/ic_menu_save" />
-
+                android:src="@drawable/delete" />
         </LinearLayout>
     </ScrollView>
 
