--- a/app/src/main/res/layout/dialog_generapass.xml
+++ b/app/src/main/res/layout/dialog_generapass.xml
@@ -24,28 +24,7 @@
             android:backgroundTint="@android:color/transparent"
             android:src="@drawable/ic_dialog_close_1" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:elevation="5dp"
-            android:enabled="false"
-            android:hint="Tu pregunta de seguridad:"
-            android:textColorHint="@color/white"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusTopStart="10dp"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white">
 
-            <EditText
-                android:id="@+id/olvido_Pregunta"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="null"
-                android:textColor="@color/white" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dialog_olvido_textilResp"
@@ -54,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:elevation="5dp"
-            android:hint="Respuesta"
+            android:hint=""
             android:textColorHint="@color/white"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusTopEnd="10dp"
@@ -62,7 +41,7 @@
             app:boxStrokeColor="@color/white"
             app:endIconMode="clear_text"
             app:endIconTint="@color/white"
-            app:helperText="Cuida el uso de Mayuscúlas y minúsculas"
+            app:helperText="Contraseña sugerida"
             app:helperTextTextColor="@color/white"
             app:hintTextColor="@color/white">
 
@@ -75,18 +54,19 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCopiar"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:backgroundTint="@color/deg"
+            android:backgroundTint="@color/colorAccent"
             android:backgroundTintMode="screen"
             android:elevation="5dp"
             android:importantForAutofill="auto"
             android:maxLines="1"
-            android:text="Validar"
+            android:layout_gravity="center"
+            android:text="Copiar "
             android:textColor="@color/black"
             app:cornerRadius="100dp"
-            app:icon="@android:drawable/ic_media_play"
+            app:icon="@drawable/copiar"
             app:iconGravity="start"
             app:iconTint="@color/inversoDeg" />
     </LinearLayout>
